EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/26/2009==
WildcardX: Fixed a bug that displayed the name of a target being summoned in an incorrect format.
Angelox: Bots- Weapons that proc'd rune-types were proc'ing for the whole group. 3 fighters with PGTs made you pretty much bullet-proof.

==05/25/2009==
cavedude: (gaeorn) Added a possible fix for some NPCs not always spawning.
Congdar: Bots - Added PvP for bots.
WildcardX: (erde) Added include for limits.h.

==05/24/2009==
KLS: Fixed dodge/parry/riposte, lowered their effectiveness from skill points slightly.
Congdar: Bots - Added new command #bot magepet [earth|water|air|fire|monster] - Select the pet type you want your Mage bot to use.

==05/23/2009==
KLS: Spells with 0 spell mod will now act as if their mod was 100% or normal instead of 0% of normal.
KLS: (Derision) Implemented discipline reuse timer's client side effects
Congdar: New feature to choose if a key should go on the keyring or not.
	required sql 564_nokeyring.sql

==05/21/2009==
Trevius: Added new quest command quest::saylink() to create itemlinks in quest text that can be clicked for a response

Recommended SQL: .\utils\sql\svn\553_saylink_table.sql

==05/20/2009==
Angelox: Bots- Bots can't stack invis-undead, invis-live, or any other invis type spell.
KLS: Fix for NPCs jumping in place when they have the fixpathingZ rules for movement enabled.
KLS: Traps will no longer attempt to clean up their npcs, every time a trap is destroyed so are the NPCs so it's redundant and risky.
Congdar: Bots - Added Magician AA Elemental Durability, Fixed #bot corpse summon, AI Tweak

==05/19/2009==
Trevius: Identified hairstyle, haircolor, beard, and beardcolor in the Titanium Illusion struct so the related commands now work in Titanium.
KLS: PvP info will only be set if the server type is set to 1 (pvp)
KLS: Adjusted chances on dodge/parry/riposte modifiers