@@ -79,10 +79,10 @@ OP_PreLogoutReply=0x0000		# 0x711E
 #Required to fully log in
 OP_SpawnAppearance=0x50EC		#Trevius 12/20/08
 OP_TributeUpdate=0x71FB			#SEQ 12/04/08
-OP_TributeTimer=0x2871
-OP_TaskDescription=0x0AF9		#
+OP_TributeTimer=0x2871			#Derision 2009
+OP_TaskDescription=0x0AF9		#Derision 2009
 OP_TaskActivity=0x2E60			#SEQ 12/04/08
-OP_CompletedTasks=0x75AC		#
+OP_CompletedTasks=0x75AC		#Derision 2009
 OP_Weather=0x70A5			#SEQ 12/04/08
 OP_SendAATable=0x6F05			#Trevius 12/20/08
 OP_UpdateAA=0x45D2			#Trevius 12/20/08
@@ -96,7 +96,7 @@ OP_WorldObjectsSent=0x3703		#New for SoF 1/1/09
 OP_BlockedBuffs=0x39C4			#New for SoF 1/1/09
 OP_SendExpZonein=0x1FA1			#Trevius 12/20/08
 OP_SendTributes=0x6764			#Trevius 12/20/08
-OP_TributeInfo=0x68C2
+OP_TributeInfo=0x68C2			#Derision 2009
 OP_SendGuildTributes=0x3F33 		#Trevius 12/20/08
 OP_AAExpUpdate=0x3518			#SEQ 12/04/08
 OP_ExpUpdate=0x6d0b			#SEQ 12/04/08
@@ -122,13 +122,13 @@ OP_GuildPeace=0x1B42			#Xinu 02/20/09
 OP_SetGuildMOTD=0x273F			#Xinu 2/20/09
 OP_GuildList=0x04FB     		#ShowEQ Same as GuildsList???
 OP_ZoneGuildList=0x0000			#
-OP_GuildWar=0x5F91			#
+OP_GuildWar=0x5F91			#Xinu 02/22/09
 OP_GuildLeader=0x7703			#Xinu 02/22/09
 OP_GuildDemote=0x0000			#
 OP_GetGuildsList=0x0000			#
 OP_GuildPublicNote=0x0000		#
 OP_GuildDelete=0x0B9A			#Xinu 02/22/09
-OP_GuildInviteAccept=0x110F		#
+OP_GuildInviteAccept=0x110F		#Xinu 02/22/09
 OP_GuildManageBanker=0x0000		#
 OP_GuildBank=0x0000			#
 #OP_GuildManageRemove=0x0000		#
@@ -205,23 +205,23 @@ OP_WhoAllResponse=0x3817		#Trevius 12/20/08
 OP_FriendsWho=0x237b			#Trevius 03/23/09
 OP_ConfirmDelete=0x79A5			#Trevius 12/20/08
 OP_Logout=0x3874 			#SEQ 12/04/08
-OP_Rewind=0x428F			#Trevius 1/20/08
-OP_TargetCommand=0x2DA9			#Trevius 1/20/08
-OP_InspectRequest=0x5A79		#Trevius 1/20/08
-OP_Hide=0x65FF				#Trevius 1/20/08
-OP_Jump=0x7871				#Trevius 1/20/08
-OP_Camp=0x6807				#Trevius 1/20/08
-OP_Emote=0x5f4D				#Trevius 2/16/08
-OP_SetRunMode=0x2716			#Trevius 1/20/08
-OP_BankerChange=0x03DD			#Trevius 1/20/08
-OP_TargetMouse=0x4395			#Trevius 1/20/08
-OP_MobHealth=0x311A			#Trevius 1/20/08
-OP_InitialMobHealth=0x23F1		#Trevius 1/20/08
-OP_TargetHoTT=0x1306			#
-OP_DeleteSpawn=0x15da			#Trevius 1/20/08
+OP_Rewind=0x428F			#Trevius 1/20/09
+OP_TargetCommand=0x2DA9			#Trevius 1/20/09
+OP_InspectRequest=0x5A79		#Trevius 1/20/09
+OP_Hide=0x65FF				#Trevius 1/20/09
+OP_Jump=0x7871				#Trevius 1/20/09
+OP_Camp=0x6807				#Trevius 1/20/09
+OP_Emote=0x5f4D				#Trevius 2/16/09
+OP_SetRunMode=0x2716			#Trevius 1/20/09
+OP_BankerChange=0x03DD			#Trevius 1/20/09
+OP_TargetMouse=0x4395			#Trevius 1/20/09
+OP_MobHealth=0x311A			#Trevius 1/20/09
+OP_InitialMobHealth=0x23F1		#Trevius 1/20/09
+OP_TargetHoTT=0x1306			#Derision 2009
+OP_DeleteSpawn=0x15da			#Trevius 1/20/09
 OP_MobUpdate=0x7647    			#SEQ 01/17/08
-OP_AutoAttack=0x3427			#Trevius 01/20/08
-OP_AutoAttack2=0x6017			#Trevius 01/20/08
+OP_AutoAttack=0x3427			#Trevius 01/20/09
+OP_AutoAttack2=0x6017			#Trevius 01/20/09
 OP_Consume=0x729a			#Trevius 02/08/09
 OP_MoveItem=0x14B3			#Trevius 02/08/09
 OP_DeleteItem=0x7DD4			#Xinu 03/08/09 0x41EE 0x018E 0x070C
@@ -229,7 +229,7 @@ OP_DeleteCharge=0x32e2			#Trevius 03/23/09
 OP_ItemPacket=0x78Cd			#Trevius 02/08/09
 OP_ItemLinkResponse=0x31E4		#Trevius 02/16/09
 OP_ItemLinkClick=0x2DE4			#Trevius 02/08/09
-OP_NewSpawn=0x581A    			#Trevius 01/20/08
+OP_NewSpawn=0x581A    			#Trevius 01/20/09
 OP_Track=0x060A				#Trevius 02/17/09
 OP_TrackTarget=0x21e8			#Xinu 02/22/09
 OP_TrackUnknown=0x6A70			#Trevius 02/17/09
@@ -260,37 +260,46 @@ OP_YellForHelp=0x4F4A			#Trevius 03/19/09
 OP_LoadSpellSet=0x05B5			#Trevius 03/19/09
 OP_Bandolier=0x3FD4			#Trevius 03/19/09
 OP_PotionBelt=0x16F3			#Trevius 03/19/09
-OP_DuelResponse=0x5E59			#
+OP_DuelResponse=0x5E59			#Derision 2009
 OP_SaveOnZoneReq=0x1103			#Trevius 03/20/09
 OP_ReadBook=0x424a			#Xinu 03/19/09
 OP_Dye=0x3611				#Xinu 03/19/09
 OP_InterruptCast=0x51F6			#Xinu 02/25/09
 OP_AAAction=0x0A4F			#Xinu 02/20/09
 OP_LeadershipExpToggle=0x24D4		#Xinu 02/20/09
-OP_LeadershipExpUpdate=0x58b6		#
-OP_PurchaseLeadershipAA=0x1408		#
-OP_UpdateLeadershipAA=0x7abf		#
-OP_MarkNPC=0x00c6			#
-OP_DoGroupLeadershipAbility=0x5a64	#
-OP_DelegateAbility=0x57e3		#
-OP_SetGroupTarget=0x1651		#
-OP_DuelResponse2=0x2A85			#
-OP_Charm=0x2F32				#
-OP_Stun=0x55BF				#
-OP_DisciplineUpdate=0x0000		#
-OP_DisciplineTimer=0x53c5
-OP_FindPersonRequest=0x07F0		#
-OP_FindPersonReply=0x7770		#
-OP_Sound=0x2B02				#
-OP_PetBuffWindow=0x124A			# 
-OP_BecomeCorpse=0x0000			#
-OP_LevelAppearance=0x3EC8		#
-OP_LDoNButton=0x0000			#
-OP_Translocate=0x1F0F			#
-OP_Sacrifice=0x0x55C9			#
-OP_PopupResponse=0x028B			#
-OP_OnLevelMessage=0x0332		#
+OP_LeadershipExpUpdate=0x58b6		#Derision 2009
+OP_PurchaseLeadershipAA=0x1408		#Derision 2009
+OP_UpdateLeadershipAA=0x7abf		#Derision 2009
+OP_MarkNPC=0x00c6			#Derision 2009
+OP_DoGroupLeadershipAbility=0x5a64	#Derision 2009
+OP_DelegateAbility=0x57e3		#Derision 2009
+OP_SetGroupTarget=0x1651		#Derision 2009
+OP_DuelResponse2=0x2A85			#Derision 2009
+OP_Charm=0x2F32				#Derision 2009
+OP_Stun=0x55BF				#Derision 2009
+OP_FindPersonRequest=0x07F0		#Derision 2009
+OP_FindPersonReply=0x7770		#Derision 2009
+OP_Sound=0x2B02				#Derision 2009
+OP_PetBuffWindow=0x124A			#Derision 2009 
+OP_LevelAppearance=0x3EC8		#Derision 2009
+OP_Translocate=0x1F0F			#Derision 2009
+OP_Sacrifice=0x0x55C9			#Derision 2009
+OP_PopupResponse=0x028B			#Derision 2009
+OP_OnLevelMessage=0x0332		#Derision 2009
 OP_AugmentInfo=0x08f8			#RealityIncarnate 4/28/09
+OP_Petition=0x3A46			#Derision 2009 /guidehelp
+OP_SomeItemPacketMaybe=0x08FA		#Derision 2009
+OP_PVPStats=0x6af1			#Derision 2009
+OP_PVPLeaderBoardRequest=0x5b3b		#Derision 2009
+OP_PVPLeaderBoardReply=0x3a69		#Derision 2009
+OP_PVPLeaderBoardDetailsRequest=0x43b6	#Derision 2009
+OP_PVPLeaderBoardDetailsReply=0x680c	#Derision 2009
+OP_RestState=0x116E			#Derision 2009
+OP_RespawnWindow=0x063B			#SEQ 12/04/08 or 0x7BF6
+OP_DisciplineTimer=0x53c5		#Derision 2009
+OP_DisciplineUpdate=0x0000		#
+OP_BecomeCorpse=0x0000			#
+OP_LDoNButton=0x0000			#
 
 #Looting
 OP_LootRequest=0x36E3			#Trevius 02/16/09
@@ -300,13 +309,13 @@ OP_LootComplete=0x48F3			#Trevius 02/23/09
 
 #bazaar trader stuff stuff:
 OP_BazaarSearch=0x14F2			#SEQ 12/04/08 0x4675
-OP_TraderDelItem=0x068D
-OP_BecomeTrader=0x32B7
-OP_TraderShop=0x1ACF
+OP_TraderDelItem=0x068D			#Derision 2009
+OP_BecomeTrader=0x32B7			#Derision 2009
+OP_TraderShop=0x1ACF			#Derision 2009
 OP_TraderItemUpdate=0x0000		#
 OP_Trader=0x6b41			#Xinu 02/21/09
 OP_ShopItem=0x0000			#
-OP_TraderBuy=0x7569
+OP_TraderBuy=0x7569			#Derision 2009
 OP_Barter=0x51bf			#Xinu 02/21/09
 OP_BazaarInspect=0x0000			#
 OP_Bazaar=0x0000			#
@@ -316,7 +325,7 @@ OP_TradeRequest=0x180D			#Trevius 02/16/09
 OP_TradeAcceptClick=0x1D07		#Trevius 03/09/09
 OP_TradeRequestAck=0x1255		#Xinu 02/24/09
 OP_TradeCoins=0x08CA			#Trevius 03/10/09 
-OP_FinishTrade=0x30B7 			#Trevius 03/09/09 0x4919 0x1758
+OP_FinishTrade=0x30B7 			#Trevius 03/09/09
 OP_CancelTrade=0x7A43			#Xinu 02/24/09
 OP_TradeMoneyUpdate=0x69E7
 OP_MoneyUpdate=0x305A
@@ -332,7 +341,7 @@ OP_ItemVerifyReply=0x41ee		#Trevius 03/15/09
 
 #merchant crap
 OP_ShopPlayerSell=0x5A58		#Trevius 02/16/09
-OP_ShopRequest=0x5FB7			#Trevius 2/16/08
+OP_ShopRequest=0x5FB7			#Trevius 2/16/09
 OP_ShopEnd=0x0BD9			#Xinu 02/20/09
 OP_ShopEndConfirm=0x475F		#Trevius 02/16/09
 OP_ShopPlayerBuy=0x09C4			#Trevius 02/16/09
@@ -348,7 +357,6 @@ OP_RecipesSearch=0x41A2			#Xinu 02/20/09
 OP_RecipeReply=0x67f5			#Trevius 03/14/09
 OP_RecipeAutoCombine=0x0427		#Trevius 03/14/09
 OP_TradeSkillCombine=0x163C		#Xinu 02/20/09
-#0x1758 0x0f05 0x70d8 0x3ec7 0x0e66 0x0a27 0x3fe7 0x38f7
 
 #Tribute Packets:
 OP_OpenGuildTributeMaster=0x3223	#Xinu 02/20/09
@@ -460,7 +468,6 @@ OP_CrashDump=0x0000			#
 OP_LoginComplete=0x0000     		#
 
 #discovered opcodes not yet used:
-
 OP_RequestTitles=0x0000			#
 OP_SendTitleList=0x0000			#
 OP_SetTitle=0x0000			#
@@ -478,26 +485,20 @@ OP_RequestKnowledgeBase=0x0000		#
 OP_KnowledgeBase=0x0000			#
 OP_SlashAdventure=0x0000		#/adventure
 OP_BecomePVPPrompt=0x0000		#
-OP_PVPStats=0x6af1			#
-OP_PVPLeaderBoardRequest=0x5b3b		#
-OP_PVPLeaderBoardReply=0x3a69		#
-OP_PVPLeaderBoardDetailsRequest=0x43b6	#
-OP_PVPLeaderBoardDetailsReply=0x680c	#
 OP_MoveLogRequest=0x0000		#gone I think
 OP_MoveLogDisregard=0x0000		#gone I think
-OP_RestState=0x116E
 
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x0000		#Trevius 02/20/09
 OP_Some6ByteHPUpdate=0x0000		#seems to happen when you target group members
-OP_SomeItemPacketMaybe=0x08FA		#
+
 OP_QueryResponseThing=0x0000		#
 
 #Petition Opcodes
 OP_PetitionSearch=0x0000                #search term for petition
 OP_PetitionSearchResults=0x0000         #(list of?) matches from search
 OP_PetitionSearchText=0x0000            #text results of search
-OP_Petition=0x3A46			# /guidehelp
+
 OP_PetitionUpdate=0x0000		#
 OP_PetitionCheckout=0x0000		#
 OP_PetitionCheckIn=0x0000		#
@@ -568,7 +569,6 @@ OP_InitialHPUpdate=0x0000		#
 #OP_GroupDisband2=0x0000    		#SEQ 10/07/08 --NEW FROM SEQ
 #OP_GroupLeader=0x0000    		#SEQ 10/07/08 --NEW FROM SEQ
 #OP_CorpseLocResponse=0x0292		#SEQ 12/04/08 --NEW FROM SEQ
-#OP_RespawnWindow=0x063B		#
 #OP_RespawnFromHover=0x7BF6		#SEQ 12/04/08 --NEW FROM SEQ
 #OP_RemoveSpawn=0x0000    		#SEQ 04/17/08 --NEW FROM SEQ
 #OP_Shroud=0x7580 			#SEQ 12/04/08 --NEW FROM SEQ
